[tool.poetry]
name = "wake-on-lan-api"
version = "0.1.0"
description = "Wake On Lan Webhook / API"
authors = ["Jorge Ruiz <contact@jorgeruizdev.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
wakeonlan = "3.0.0"
Flask = "2.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "2.15.10"
black = "22.12.0"
isort = "5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
